@@ -1,7 +1,7 @@
 use ExtUtils::MakeMaker;
 WriteMakefile(
               'NAME'	=> 'WWW::Search::Ebay',
-              'VERSION' => '2.06',
+              'VERSION' => '2.07',
               'PREREQ_PM' => {
                               'HTML::Form' => 0,
                               'HTML::TreeBuilder' => 3,
